objects/hed__Relationship_Lookup__c.object
<CustomObject><fields>
        <fullName>hed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this reciprocal lookup is active.</description>
        <inlineHelpText>Indicates if this reciprocal lookup is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Female__c</fullName>
        <description>The value used if the Contact's gender field matches the values in the Female Custom Label or the Contact's salutation indicates gender.</description>
        <inlineHelpText>The value used if the Contact's gender field matches the values in the Female Custom Label or the Contact's Salutation indicates gender.</inlineHelpText>
        <label>Female</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Male__c</fullName>
        <description>The value used if the Contact's gender field matches the values in the Male Custom Label or the Contact's salutation indicates gender.</description>
        <inlineHelpText>The value used if the Contact's gender field matches the values in the Male Custom Label or the Contact's Salutation indicates gender.</inlineHelpText>
        <label>Male</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Neutral__c</fullName>
        <description>The value used if the Contact's gender field does not match either the Male or Female Custom Labels, and the Contact's salutation does not infer gender.</description>
        <inlineHelpText>The value used if the Contact's gender field does not match either the Male or Female Custom Labels, and the Contact's Salutation does not infer gender.</inlineHelpText>
        <label>Neutral</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>Provides table of gendered and gender-neutral reciprocal relationships for various relationship types (ie. Father-Son, Father-Daughter, Father-Child)</description><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><label>Relationship Lookup</label><visibility>Public</visibility></CustomObject>